--- a/index.html
+++ b/index.html
@@ -12,6 +12,41 @@
     <link rel="stylesheet" href="./assets/css/reponsive.css">
 </head>
 <body>
+    <div class="app">
+        <div class="header">
+            <div class="header-container container">
+                <div class="row header-container-row">
+                    <div class="col-xl-12 header__head">
+                        <a href="#" class="header-head__logo">
+                            <img src="./assets/img/logo-main.png" alt="" class="header-head__logo__img">
+                        </a>
+                        <ul class="header-head__list header-head__list-mobile">
+                            <li class="header-head__list-items__items">
+                                <a href="#" class="header-head__list-items-items__item active">Phim mới</a>
+                            </li>
+                            <li class="header-head__list-items__items">
+                                <a href="#" class="header-head__list-items-items__item">Phim lẻ</a>
+                            </li>
+                            <li class="header-head__list-items__items">
+                                <a href="#" class="header-head__list-items-items__item">Phim bộ</a>
+                            </li>
+                            <li class="header-head__list-items__items">
+                                <a href="#" class="header-head__list-items-items__item">Phim hoạt hình</a>
+                            </li>
+                            <li class="header-head__list-items__items">
+                                <a href="#" class="header-head__list-items-items__item">Phim chiếu rạp</a>
+                            </li>
+                        </ul>
+                        <div class="header-head__moblie-btn">
+                            <i class="fas fa-bars header-head__moblie-btn__bars"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="test"></div>
+        <div class="test"></div>
+    </div>
     
 </body>
 </html>
