--- a/index.html
+++ b/index.html
@@ -85,6 +85,116 @@
                 </div>
             </div>
         </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-9 product">
+                    <div class="product__header">
+                        <h2 class="product--header__title flim-category--title">Phim bộ mới</h2>
+                        <div class="product--header__date-flim">
+                            <a href="#" class="date-flim__item active">Tất cả phim</a>
+                            <a href="#" class="date-flim__item">Sắp chiếu</a>
+                            <a href="#" class="date-flim__item">Phim mới</a>
+                        </div>
+                    </div>
+                    <div class="product__items">
+                        <div class="row">
+                            <div class="col-xl-3 product__item--col">
+                                <div class="product__item">
+                                    <a href="#" class="product__img-piont product__img-piont-big">
+                                        <div class="product__img" style="background-image: url(./assets/img/item-1.jpg);">
+                                            <h4 class="product__piont">8,6</h4>
+                                        </div>
+                                    </a>
+                                    <img src="./assets/img/star.png" class="product__star">
+                                    <h3 class="product__title">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
+                                    <div class="product--item__tag-flim">
+                                        <i class="fas fa-tag product--item__tag--icon"></i>
+                                        <a href="#" class="product--item__tag--text">Phim hoạt hình</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3">
+                                <div class="product__item">
+                                    <a href="#" class="product__img-piont product__img-piont-big">
+                                        <div class="product__img" style="background-image: url(./assets/img/item-2.jpg);">
+                                            <h4 class="product__piont">8,6</h4>
+                                        </div>
+                                    </a>
+                                    <img src="./assets/img/star.png" class="product__star">
+                                    <h3 class="product__title">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
+                                    <div class="product--item__tag-flim">
+                                        <i class="fas fa-tag product--item__tag--icon"></i>
+                                        <a href="#" class="product--item__tag--text">Phim hoạt hình</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3">
+                                <div class="product__item">
+                                    <a href="#" class="product__img-piont product__img-piont-big">
+                                        <div class="product__img" style="background-image: url(./assets/img/item-3.jpg);">
+                                            <h4 class="product__piont">8,6</h4>
+                                        </div>
+                                    </a>
+                                    <img src="./assets/img/star.png" class="product__star">
+                                    <h3 class="product__title">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
+                                    <div class="product--item__tag-flim">
+                                        <i class="fas fa-tag product--item__tag--icon"></i>
+                                        <a href="#" class="product--item__tag--text">Phim hoạt hình</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3">
+                                <div class="product__item">
+                                    <a href="#" class="product__img-piont product__img-piont-big">
+                                        <div class="product__img" style="background-image: url(./assets/img/item-4.jpg);">
+                                            <h4 class="product__piont">8,6</h4>
+                                        </div>
+                                    </a>
+                                    <img src="./assets/img/star.png" class="product__star">
+                                    <h3 class="product__title">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
+                                    <div class="product--item__tag-flim">
+                                        <i class="fas fa-tag product--item__tag--icon"></i>
+                                        <a href="#" class="product--item__tag--text">Phim hoạt hình</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3">
+                                <div class="product__item">
+                                    <a href="#" class="product__img-piont product__img-piont-big">
+                                        <div class="product__img" style="background-image: url(./assets/img/item-2.jpg);">
+                                            <h4 class="product__piont">8,6</h4>
+                                        </div>
+                                    </a>
+                                    <img src="./assets/img/star.png" class="product__star">
+                                    <h3 class="product__title">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
+                                    <div class="product--item__tag-flim">
+                                        <i class="fas fa-tag product--item__tag--icon"></i>
+                                        <a href="#" class="product--item__tag--text">Phim hoạt hình</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3">
+                                <div class="product__item">
+                                    <a href="#" class="product__img-piont product__img-piont-big">
+                                        <div class="product__img" style="background-image: url(./assets/img/item-1.jpg);">
+                                            <h4 class="product__piont">8,6</h4>
+                                        </div>
+                                    </a>
+                                    <img src="./assets/img/star.png" class="product__star">
+                                    <h3 class="product__title">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
+                                    <div class="product--item__tag-flim">
+                                        <i class="fas fa-tag product--item__tag--icon"></i>
+                                        <a href="#" class="product--item__tag--text">Phim hoạt hình</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
