--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/resset.css">
-    <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/library/bootstrap-4.0.0/dist/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/library/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/reponsive.css">
@@ -99,7 +99,7 @@
                     </div>
                     <div class="product__items">
                         <div class="row">
-                            <div class="col-xl-3 product__item--col">
+                            <div class="col-xl-3 col-md-4 col-sm-6 product__item--col">
                                 <div class="product__item">
                                     <a href="#" class="product__img-piont product__img-piont-big">
                                         <div class="product__img" style="background-image: url(./assets/img/item-1.jpg);">
@@ -107,14 +107,14 @@
                                         </div>
                                     </a>
                                     <img src="./assets/img/star.png" class="product__star">
-                                    <h3 class="product__title">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
+                                    <h3 class="product__title product__title-line-3">Tước Tích 2 : Lãnh Huyết Cuồng Yến Lãnh Huyết Cuồng Yến</h3>
                                     <div class="product--item__tag-flim">
                                         <i class="fas fa-tag product--item__tag--icon"></i>
                                         <a href="#" class="product--item__tag--text">Phim hoạt hình</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3">
+                            <div class="col-xl-3 col-md-4 col-sm-6 product__item--col">
                                 <div class="product__item">
                                     <a href="#" class="product__img-piont product__img-piont-big">
                                         <div class="product__img" style="background-image: url(./assets/img/item-2.jpg);">
@@ -122,14 +122,14 @@
                                         </div>
                                     </a>
                                     <img src="./assets/img/star.png" class="product__star">
-                                    <h3 class="product__title">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
+                                    <h3 class="product__title product__title-line-3">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
                                     <div class="product--item__tag-flim">
                                         <i class="fas fa-tag product--item__tag--icon"></i>
                                         <a href="#" class="product--item__tag--text">Phim hoạt hình</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3">
+                            <div class="col-xl-3 col-md-4 col-sm-6 product__item--col">
                                 <div class="product__item">
                                     <a href="#" class="product__img-piont product__img-piont-big">
                                         <div class="product__img" style="background-image: url(./assets/img/item-3.jpg);">
@@ -137,14 +137,14 @@
                                         </div>
                                     </a>
                                     <img src="./assets/img/star.png" class="product__star">
-                                    <h3 class="product__title">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
+                                    <h3 class="product__title product__title-line-3">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
                                     <div class="product--item__tag-flim">
                                         <i class="fas fa-tag product--item__tag--icon"></i>
                                         <a href="#" class="product--item__tag--text">Phim hoạt hình</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3">
+                            <div class="col-xl-3 col-md-4 col-sm-6 product__item--col">
                                 <div class="product__item">
                                     <a href="#" class="product__img-piont product__img-piont-big">
                                         <div class="product__img" style="background-image: url(./assets/img/item-4.jpg);">
@@ -152,14 +152,14 @@
                                         </div>
                                     </a>
                                     <img src="./assets/img/star.png" class="product__star">
-                                    <h3 class="product__title">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
+                                    <h3 class="product__title product__title-line-3">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
                                     <div class="product--item__tag-flim">
                                         <i class="fas fa-tag product--item__tag--icon"></i>
                                         <a href="#" class="product--item__tag--text">Phim hoạt hình</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3">
+                            <div class="col-xl-3 col-md-4 col-sm-6 product__item--col">
                                 <div class="product__item">
                                     <a href="#" class="product__img-piont product__img-piont-big">
                                         <div class="product__img" style="background-image: url(./assets/img/item-2.jpg);">
@@ -167,14 +167,14 @@
                                         </div>
                                     </a>
                                     <img src="./assets/img/star.png" class="product__star">
-                                    <h3 class="product__title">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
+                                    <h3 class="product__title product__title-line-3">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
                                     <div class="product--item__tag-flim">
                                         <i class="fas fa-tag product--item__tag--icon"></i>
                                         <a href="#" class="product--item__tag--text">Phim hoạt hình</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3">
+                            <div class="col-xl-3 col-md-4 col-sm-6 product__item--col">
                                 <div class="product__item">
                                     <a href="#" class="product__img-piont product__img-piont-big">
                                         <div class="product__img" style="background-image: url(./assets/img/item-1.jpg);">
@@ -182,7 +182,7 @@
                                         </div>
                                     </a>
                                     <img src="./assets/img/star.png" class="product__star">
-                                    <h3 class="product__title">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
+                                    <h3 class="product__title product__title-line-3">Tước Tích 2 : Lãnh Huyết Cuồng Yến</h3>
                                     <div class="product--item__tag-flim">
                                         <i class="fas fa-tag product--item__tag--icon"></i>
                                         <a href="#" class="product--item__tag--text">Phim hoạt hình</a>
@@ -190,6 +190,24 @@
                                 </div>
                             </div>
 
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 product--list hide-on-moblie-tablet">
+                    <div class="product--list__header">
+                        <h2 class="product--header__title flim-category--title flim-category--title-small">Phim bộ hot</h2>
+                    </div>
+                    <div class="product--list__items">
+                        <div class="product--list__item">
+                            <a href="#" class="product__img-piont">
+                                <div class="product__img product__img-small" style="background-image: url(./assets/img/item-1.jpg);">
+                                    <h4 class="product__piont product__piont-small">8,6</h4>
+                                </div>
+                            </a>
+                            <div class="product--list--ietms__title-star">
+                                <h3 class="product__title product__title-line-3 product--list__title-small">Tước Tích 2 : Lãnh Huyết Cuồng Yến Lãnh Huyết Cuồng Yến</h3>
+                                <img src="./assets/img/star.png" class="product__star product__star-small">
+                            </div>
                         </div>
                     </div>
                 </div>
